--- a/style.css
+++ b/style.css
@@ -1,15 +1,14 @@
-*, *::before, *::after{
+*, *::before, *::after {
     box-sizing: border-box;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-seri;
-}
-
-:root{
-    --hue-neutral: 200;
+  }
+  
+  :root {
+    --hue-neutral: 333;
     --hue-wrong: 0;
     --hue-correct: 145;
-}
-
-body{
+  }
+  
+  body {
     --hue: var(--hue-neutral);
     padding: 0;
     margin: 0;
@@ -18,69 +17,76 @@ body{
     height: 100vh;
     justify-content: center;
     align-items: center;
-    background-color: hsl(var(--hue), 100%, 9%);
-}
-
-body.correct {
+    background-color: hsl(var(--hue), 100%, 15%);
+  }
+  
+  body.correct {
     --hue: var(--hue-correct);
-}
-
-
-body.wrong {
+  }
+  
+  body.wrong {
     --hue: var(--hue-wrong);
-}
-
-.container {
-    width: 800;
+  }
+  
+  .container {
+      height:150px;
+    width: 800px;
     max-width: 80%;
     background-color: white;
-    border-radius: 6px;
-    padding:10px;
+    border-radius: 5px;
+    padding: 10px;
     box-shadow: 0 0 10px 2px;
-}
-
-.btn-grid {
+  }
+  
+  .btn-grid {
     display: grid;
     grid-template-columns: repeat(2, auto);
     gap: 10px;
     margin: 20px 0;
-
-}
-.btn{
-   --hue: var(--hue-neutral);
-   border: 1px solid hsl(var(--hue), 100%, 30%);
-   background-color: hsl(var(--hue), 100%, 50%);
-   border-radius: 5px;
-   padding: 5px 10px;
-   color: white;
-   outline: none;
-
-
-}
-
-.btn:hover {
+  }
+  
+  .btn {
+    --hue: var(--hue-neutral);
+    border: 4px solid hsl(var(--hue), 100%, 30%);
+    background-color: hsl(var(--hue), 100%, 50%);
+    border-radius: 5px;
+    padding: 3px 10px;
+    color: white;
+    outline: none;
+  }
+  
+  .btn:hover {
     border-color: black;
-}
-.btn.correct {
-     --hue:var(--hue-correct);    
-}
-
-.btn.wrong {
-    --hue:var(--hue-wrong);    
-}
-
-.start-btn, .next-btn {
+  }
+  
+  .btn.correct {
+    --hue: var(--hue-correct);
+    color: black;
+  }
+  
+  .btn.wrong {
+    --hue: var(--hue-wrong);
+  }
+  
+  .start-btn, .next-btn {
     font-size: 1.5rem;
     font-weight: bold;
     padding: 10px 20px;
-}
-
-.controls{
-    display:flex;
+  }
+  
+  .controls {
+    display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.hide {
-    display:none;
-}
+  }
+  
+  .hide {
+    display: none;
+  }
+  
+  
+  
+  
+  
+  
+  
