--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
   }
   
   body {
-    --hue: var(--hue-neutral);
+    
     padding: 0;
     margin: 0;
     display: flex;
@@ -17,16 +17,9 @@
     height: 100vh;
     justify-content: center;
     align-items: center;
-    background-color: hsl(var(--hue), 100%, 15%);
+    background: linear-gradient(to right,#5a3040, #68fa63 );
   }
   
-  body.correct {
-    --hue: var(--hue-correct);
-  }
-  
-  body.wrong {
-    --hue: var(--hue-wrong);
-  }
   
   .container {
       height:150px;
@@ -35,7 +28,7 @@
     background-color: white;
     border-radius: 5px;
     padding: 10px;
-    box-shadow: 0 0 10px 2px;
+    box-shadow: 0 0 50px 8px;
   }
   
   .btn-grid {
