--- a/style.css
+++ b/style.css
@@ -43,14 +43,15 @@
       font-weight: bold;
       margin-right: 70px;
       margin-top: 10px;
-      padding: 18px;
+      padding: 9px;
       position: fixed;
+      display: inline-flex;
       align-items: center;
       justify-content: space-between;
       top:  0;
       right: 0;
-      height: 10px;
-      width: 60px;
+      height: 29px;
+      width: 68px;
       border-radius: 2px;
       background-color:black;
       color: white;
