--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@
     gap: 10px;
     margin: 20px 0;
   }
+
   
   .btn {
     --hue: var(--hue-neutral);
@@ -148,6 +149,27 @@
     /* margin-top: 10px; */
     padding: 9px;
     /* position: fixed; */
+    display: inline-flex;
+    align-items: center;
+    justify-content: space-between;
+    top:  0;
+    right: 0;
+    height: 29px;
+    width: 68px;
+    border-radius: 2px;
+    background-color:black;
+    color: white;
+    }
+
+    
+  .display2 {
+    font-family:monospace ;
+    font-size: 19px;
+    font-weight: bold;
+    margin-right: 70px;
+    margin-top: 40px;
+    padding: 9px;
+    position: fixed;
     display: inline-flex;
     align-items: center;
     justify-content: space-between;
